--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atonal-iam",
-  "version": "1.4.7",
+  "version": "1.4.8",
   "description": "The permission-based IAM implementation based on Atonal Framework",
   "main": "dist/index.js",
   "author": "Improvising Rhythm Ltd.",
@@ -8,15 +8,19 @@
   "scripts": {
     "build": "rimraf dist && tsc"
   },
+  "peerDependencies": {
+    "atonal": "^1.0.41",
+    "atonal-db": "^1.0.30"
+  },
   "devDependencies": {
     "@types/lodash": "^4.14.177",
     "@types/node": "^16.9.6",
+    "atonal": "^1.0.41",
+    "atonal-db": "^1.0.30",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.3"
   },
   "dependencies": {
-    "atonal": "^1.0.40",
-    "atonal-db": "^1.0.30",
     "libphonenumber-js": "^1.9.44",
     "lodash": "^4.17.21",
     "otpauth": "^7.0.9"
