--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "atonal-iam",
-  "version": "1.4.8",
-  "description": "The permission-based IAM implementation based on Atonal Framework",
+  "version": "2.0.0",
+  "description": "The RBAC-based IAM implementation based on Atonal Framework",
   "main": "dist/index.js",
   "author": "Improvising Rhythm Ltd.",
   "license": "MIT",
