--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atonal-iam",
-  "version": "2.2.2",
+  "version": "2.3.0",
   "description": "The RBAC-based IAM implementation based on Atonal Framework",
   "main": "dist/index.js",
   "author": "Improvising Rhythm Ltd.",
@@ -21,6 +21,7 @@
     "typescript": "^4.5.3"
   },
   "dependencies": {
+    "assert": "^2.0.0",
     "libphonenumber-js": "^1.9.44",
     "lodash": "^4.17.21",
     "otpauth": "^7.0.9"
